--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             </li>
         </ul>
         <hr> 
+        <a href="passport.html" style="font-size: 1.5rem;display: block;text-align: center;margin-top: 2rem;font-weight: 700; text-decoration: none; padding: 20px;">Задание 1.2</a>
     </div>
 </body>
 </html>
