--- a/passport.html
+++ b/passport.html
@@ -99,5 +99,13 @@
         <div class="place-of-birth">Lorem ipsum dolor sit amet consectetur</div>
         <img src="images/Screenshot 2023-09-13 091842.png" alt="">
     </div>
+    <div class="btn-box">
+        <button>Изменить имя</button>
+        <button>Изменить фамилию</button>
+        <button>Изменить дату рождения</button>
+    </div>
 </body>
+<script>
+
+</script>
 </html>
