--- a/passport.html
+++ b/passport.html
@@ -135,6 +135,7 @@
         <button class="change-last-name">Изменить фамилию</button>
         <button class="change-date">Изменить дату рождения</button>
     </div>
+    <a href="index.html" style="font-size: 1.5rem;display: block;text-align: center;margin-top: 2rem;font-weight: 700; text-decoration: none; padding: 20px;">Задание 1.1</a>
 </body>
 <script>
     const changeFirstName = document.getElementsByTagName('button')[0];
